src/objects/CBWelcome__c.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <label>Icon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>utility:image</fullName>
                    <default>true</default>
                    <label>utility:image</label>
                </value>
                <value>
                    <fullName>utility:warning</fullName>
                </value>
                <value>
                    <fullName>utility:error</fullName>
                </value>
                <value>
                    <fullName>utility:formula</fullName>
                </value>
                <value>
                    <fullName>utility:macros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>CBWelcome__c</referenceTo>
        <relationshipLabel>CB Welcomes</relationshipLabel>
        <relationshipName>CBWelcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                    <default>true</default>
                    <label>Simple</label>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CB Welcome</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Welcome  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Welcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>